# music-player

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  compile  open_docs.sh  pre-commit-hook.sh  run_tests.sh  wav_player.cpp
.github/workflows/: build-and-test.yml  docs.yml
client/src/: audio_player.cpp  audio_player.h  main.cpp  music_client.cpp  music_client.h
common/include/: protocol.h  socket.h
docs/: DOCUMENTATION_GUIDE.md  header.html
server/src/: client_handler.cpp  client_handler.h  main.cpp  music_library.cpp  music_library.h  music_server.cpp  music_server.h  wav_file.cpp  wav_file.h
tests/unit/: music_library_test.cpp  protocol_test.cpp  socket_test.cpp  wav_file_test.cpp
